# ProjetoCUDA

./: .clangd  CMakeLists.txt  interface.py  pyproject.toml  test_api.py
cuda_image_lib/: __init__.py  _backend.py  blur.py  gray.py  laplace.py  validators.py
src/: main.cpp
src/cuda_backend/: CMakeLists.txt
src/cuda_backend/gaussian_blur/: CMakeLists.txt
src/cuda_backend/gaussian_blur/include/: gaussian_blur.h  gaussian_blur_kernel.h
src/cuda_backend/gaussian_blur/src/: gaussian_blur.cpp  gaussian_blur_kernel.cu
src/cuda_backend/include/: image.h
src/cuda_backend/laplace_filter/: CMakeLists.txt
src/cuda_backend/laplace_filter/include/: laplace_filter.h  laplace_filter_kernel.h
src/cuda_backend/laplace_filter/src/: laplace_filter.cpp  laplace_filter_kernel.cu
src/cuda_backend/rgb_to_gray/: CMakeLists.txt
src/cuda_backend/rgb_to_gray/include/: rgb_to_gray.h  rgb_to_gray_kernel.h
src/cuda_backend/rgb_to_gray/src/: rgb_to_gray.cpp  rgb_to_gray_kernel.cu
src/cuda_image_processor/: __init__.py
